[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pycarbon"
version = "0.1.0"
description = "A Carbon-like datetime library for Python inspired by Laravel's Carbon"
authors = [
    { name = "Your Name", email = "you@example.com" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/yourname/pycarbon"
